--- a/lab1/README.qmd
+++ b/lab1/README.qmd
@@ -18,13 +18,13 @@ format:
 2.  Rstudio Desktop
 3.  Интерпретатор языка R 4.4.1
 
-##План
+## План
 
 1.  Подготовить рабочее окружение для работы с RStudio
 2.  Разработать отчет с использованием стека технологий Rmarkdown и Quarto
 3.  Оформить отчет в соответствии с шаблоном
 
-##Шаги
+## Шаги
 
 1. Для начала работы необходимо установить на свою машину R и Rstudio. Делается это на сайте posit.co. Скачиваются версии для Mac M1.
 
@@ -42,10 +42,10 @@ format:
 
 ![](img/4.png)
 
-#Оценка результата
+## Оценка результата
 
 В результате работы было скачано ПО, был создан репозиторий, и отчет, который был загружен в отдельную папку
 
-#Вывод
+## Вывод
 
 Мы научились создавать и делать отчет в RStudio, а также загружать работы на GitHub.
