--- a/lab1/README.qmd
+++ b/lab1/README.qmd
@@ -1,51 +1,335 @@
 ---
-title: "Разработка отчета в Quarto"
+title: "Работа с языком программирования R"
 author: "lieless@yandex.ru"
 format: 
   md:
     output-file: README.md
 ---
 
-# Подготовка воспроизводимых отчетов
+# Введение в R
 
 ## Цель работы
 
-Развить и закрепить навыки использования современного стека воспроизводимых исследований
+Развить навыки работы с языком программирования R и закрепить знания базовых типов данных и операций с ними
 
 ## Исходные данные
 
 1.  Программное обеспечение MacOS 14.4.1 Sonoma
 2.  Rstudio Desktop
 3.  Интерпретатор языка R 4.4.1
+4.  Программный пакет swirl
 
 ## План
 
-1.  Подготовить рабочее окружение для работы с RStudio
-2.  Разработать отчет с использованием стека технологий Rmarkdown и Quarto
-3.  Оформить отчет в соответствии с шаблоном
+1.  Установить программный пакет swirl
+2.  Выполнить подкурсы
 
 ## Шаги
 
-1. Для начала работы необходимо установить на свою машину R и Rstudio. Делается это на сайте posit.co. Скачиваются версии для Mac M1.
+1.  Для начала прохождения курса необходимо установить программный пакет swirl.
 
-![](img/1.png)
+```{r}
+#install.packages("swirl")
+```
 
-2. После установки соответствующих программ создаем репозиторий report_IB в GitHub. Для этого я использую GitHub Desktop.
+2.  Запускаем задания с помощью команды.
 
-![](img/2.png)
+```{r}
+swirl::swirl()
+```
+```{r}
+12
+```
+```{r}
+5 + 7
+```
+```{r}
+x <- 5 + 7
+```
+```{r}
+x
+```
+```{r}
+y <- x - 3
+```
 
-3. Создаю новый проект, который кладу в папку репозитория report_IB. В самом проекте создаю файл README.qmd и папку img для изображений.
+```{r}
+y
+```
 
-![](img/3.png)
+```{r}
+z <- c(1.1,9,3.4)
+```
+```{r}
+z <- c(1.1, 9, 3.14)
+```
+```{r}
+?c
+```
+```{r}
+z
+```
+```{r}
+z2 <- c(z,555)
+```
+```{r}
+c (z,555,z)
+```
+```{r}
+z * 2 + 100
+```
+```{r}
+my_sqrt <- sqrt(z - 1)
+```
+```{r}
+my_sqrt
+```
+```{r}
+ my_div <- z / my_sqrt
+```
+```{r}
+my_div
+```
+```{r}
+c(1, 2, 3, 4) + c(0, 10)
+```
+```{r}
+c(1, 2, 3, 4) + c(0, 10, 100)
+```
+```{r}
+z * 2 + 1000
+```
+```{r}
+my_div
+```
+```{r}
+getwd()
+```
+```{r}
+ls()
+```
+```{r}
+x <- 9
+```
+```{r}
+ls()
+```
+```{r}
+dir()
+```
 
-4. Заканчиваю написание отчета. Сохраняем отчет и рендерим файл посредством кнопки. Создается файл README.md
+```{r}
+?list.files
+```
+```{r}
+args()
+```
+```{r}
+args(list.files())
+```
+```{r}
+args(list.files)
+```
+```{r}
+old.dir <- getwd()
+```
+```{r}
+dir.create("testdir")
+```
+```{r}
+setwd("testdir")
+```
+```{r}
+file.create("mytest.R")
+```
+```{r}
+ls()
+```
+```{r}
+list.files()
+```
+```{r}
+file.exists("mytest.R")
+```
+```{r}
+file.info("mytest.R")
+```
 
-![](img/4.png)
+```{r}
+file.rename("mytest.R", "mytest2.R")
+```
+
+```{r}
+file.copy("mytest2.R", "mytest3.R")
+```
+
+```{r}
+file.path("mytest3.R")
+```
+
+```{r}
+file.path("folder1", "folder2")
+```
+```{r}
+?dir.create
+```
+
+```{r}
+dir.create(file.path('testdir2', 'testdir3'), recursive = TRUE)
+```
+```{r}
+unlink('testdir2', recursive = TRUE)
+```
+
+```{r}
+setwd(old.dir)
+```
+
+```{r}
+1:20
+```
+```{r}
+pi:10
+```
+
+```{r}
+15:1
+```
+
+```{r}
+?':'
+```
+
+```{r}
+seq(1,20)
+```
+```{r}
+seq(0, 10, by=0.5)
+```
+```{r}
+my_seq <- seq(5, 10, length=30)
+```
+
+
+```{r}
+length(my_seq)
+```
+
+```{r}
+1:length(my_seq)
+```
+```{r}
+seq(along.with = my_seq)
+```
+
+```{r}
+seq_along(my_seq)
+```
+```{r}
+rep(0, times=40)
+```
+
+```{r}
+rep(c(0, 1, 2), times = 10)
+```
+
+```{r}
+rep(c(0, 1, 2), each = 10)
+```
+```{r}
+num_vect <- c(0.5, 55, -10, 6)
+```
+```{r}
+tf <- (num_vect < 1)
+```
+
+```{r}
+tf <- num_vect < 1
+```
+
+```{r}
+tf
+```
+```{r}
+num_vect >= 6
+```
+```{r}
+my_char <- c("My", "name", "is")
+```
+```{r}
+my_char
+```
+```{r}
+paste(my_char, collapse = " ")
+```
+
+```{r}
+my_name <- c(my_char, "Johnny")
+```
+```{r}
+my_name
+```
+```{r}
+paste(my_name, collapse = " ")
+```
+```{r}
+paste("Hello", "world!", sep = " ")
+```
+
+```{r}
+paste(1:3, c("X", "Y", "Z"), sep = "")
+```
+```{r}
+paste(LETTERS, 1:4, sep = "-")
+```
+
+```{r}
+x <- c(44, NA, 5, NA)
+```
+```{r}
+x * 3
+```
+
+```{r}
+y <- rnorm(1000)
+```
+```{r}
+ z <- rep(NA, 1000)
+```
+```{r}
+my_data <- sample(c(y, z), 100)
+```
+
+```{r}
+my_na <- is.na(my_data)
+```
+```{r}
+my_na
+```
+```{r}
+ my_data == NA
+```
+```{r}
+sum(my_na)
+```
+```{r}
+my_data
+```
+
+```{r}
+0 / 0
+```
+
+```{r}
+Inf - Inf
+```
+
+
 
 ## Оценка результата
 
-В результате работы было скачано ПО, был создан репозиторий, и отчет, который был загружен в отдельную папку
+В результате работы была скачана библиотека swirl и были пройдены 5 модулей курса "R Programming: The basics of programming in R"
 
 ## Вывод
 
-Мы научились создавать и делать отчет в RStudio, а также загружать работы на GitHub.
+Были изучены новые команды и функции языка R. Протренированы взаимодействия с переменными, векторами, файлами, циклами и NA.
