--- a/lab0/README.qmd
+++ b/lab0/README.qmd
@@ -34,7 +34,12 @@ format:
 
 ![](img/2.png)
 
-3. Создаю новый проект, который кладу в папку репозитория report_IB. В самом проекте создаю файл README.qmd и папку img для изображений.
+3. Создаю новый проект, который кладу в папку репозитория report_IB. В самом проекте создаю файл README.qmd и папку img для изображений. Отчет также может включать в себя фрагменты кода:
+
+```{r}
+print('Hello World!')
+```
+
 
 ![](img/3.png)
 
