upd necessary parts

--- a/lab4/README.qmd
+++ b/lab4/README.qmd
@@ -62,6 +62,10 @@ format:
 
 В результате работы было установлено соединение с датасетом и были выполнены задания.
 
+```{r}
+print('hello world!')
+```
+
 ## Вывод
 
 Были улучшены навыки написания sql кода. Был проанализирован датасет исходящего/входящего трафика.
