--- a/lab7/README.qmd
+++ b/lab7/README.qmd
@@ -36,7 +36,7 @@ format:
 ```{r}
 library(arrow)
 library(tidyverse)
-download.file("https://storage.yandexcloud.net/arrow-datasets/tm_data.pqt",destfile = "tm_data.pqt")
+#download.file("https://storage.yandexcloud.net/arrow-datasets/tm_data.pqt",destfile = "tm_data.pqt")
 df <- arrow::open_dataset(sources = "tm_data.pqt", format = "parquet")
 glimpse(df)
 ```
@@ -50,7 +50,7 @@ glimpse(df)
     
 ```{r}
 task1 <- df %>% filter(str_detect(src, "^12.") | str_detect(src, "^13.") | str_detect(src, "^14."))  %>% filter(!str_detect(dst, "^12.") | !str_detect(dst, "^13.") | !str_detect(dst, "^14."))  %>% group_by(src) %>% summarise("sum" = sum(bytes)) %>%  filter(sum>6000000000) %>% select(src,sum) 
-task1 %>% collect()
+task1 %>% collect() %>% knitr::kable()
 ```
     
   b.  Найдите утечку данных 2
@@ -60,7 +60,7 @@ task1 %>% collect()
 ```{r}
 task21 <- df %>% select(timestamp, src, dst, bytes) %>% mutate(trafic = (str_detect(src, "^((12|13|14)\\.)") & !str_detect(dst, "^((12|13|14)\\.)")),time = hour(as_datetime(timestamp/1000))) %>% filter(trafic == TRUE, time >= 0 & time <= 24) %>% group_by(time) %>%
 summarise(trafictime = n()) %>% arrange(desc(trafictime))
-task21 %>% collect()
+task21 %>% collect() %>% knitr::kable()
 ```
     
   По данным выясняем, что рабочим временем является 16-23. 
@@ -68,7 +68,7 @@ task21 %>% collect()
 ```{r}
 task22 <- df %>% mutate(time = hour(as_datetime(timestamp/1000))) %>% 
 filter(!str_detect(src, "^13.37.84.125")) %>%  filter(str_detect(src, "^12.") | str_detect(src, "^13.") | str_detect(src, "^14."))  %>% filter(!str_detect(dst, "^12.") | !str_detect(dst, "^13.") | !str_detect(dst, "^14."))  %>% filter(time >= 1 & time <= 15) %>%  group_by(src) %>% summarise("sum" = sum(bytes)) %>% filter(sum>290000000) %>% select(src,sum) 
-task22 %>% collect()
+task22 %>% collect() %>% knitr::kable()
 ```
     
   c.  Найдите утечку данных 3
@@ -78,12 +78,12 @@ task31 <- df %>% filter(!str_detect(src, "^13.37.84.125")) %>% filter(!str_detec
 
 
 task31 %>%  group_by(port) %>% summarise("mean"=mean(bytes), "max"=max(bytes), "sum" = sum(bytes)) %>% 
-  mutate("Raz"= max-mean)  %>% filter(Raz!=0, Raz>170000) %>% collect()
+  mutate("Raz"= max-mean)  %>% filter(Raz!=0, Raz>170000) %>% collect() %>% knitr::kable()
 ```
     
 ```{r}
 task32 <- task31  %>% filter(port==37) %>% group_by(src) %>% summarise("mean"=mean(bytes)) %>% filter(mean>37543) %>% select(src)
-task32 %>% collect()
+task32 %>% collect() %>% knitr::kable()
 ```
 
 ## Оценка результата
