--- a/lab3/README.qmd
+++ b/lab3/README.qmd
@@ -31,7 +31,7 @@ format:
 1.  Для начала прохождения курса необходимо установить пакет nyclights13.
 
 ```{r}
-install.packages("nycflights13")
+#install.packages("nycflights13")
 ```
 2. Загружаем библиотеки.
 
@@ -87,33 +87,33 @@ flights %>% filter(origin == "JFK", month == 5) %>% nrow()
   
   g) Какой самый северный аэропорт?
 ```{r}
-airports %>% arrange(desc(lat)) %>% slice(1)
+airports %>% arrange(desc(lat)) %>% slice(1) %>% knitr::kable()
 ```
   
   h) Какой аэропорт самый высокогорный (находится выше всех над уровнем моря)?
 ```{r}
-airports %>% arrange(desc(alt)) %>% slice(1)
+airports %>% arrange(desc(alt)) %>% slice(1) %>% knitr::kable()
 ```
   
   i) Какие бортовые номера у самых старых самолетов?
 ```{r}
-planes %>% arrange(desc(year)) %>% select(tailnum)
+planes %>% arrange(year) %>% head(1) %>% select(tailnum) %>% knitr::kable()
 ```
   
   j) Какая средняя температура воздуха была в сентябре в аэропорту John F
   Kennedy Intl (в градусах Цельсия).
 ```{r}
-weather %>% filter(origin == "JFK", month == 9) %>% summarise(avg_temp = mean((temp - 32) * 5 / 9, na.rm = TRUE))
+weather %>% filter(origin == "JFK", month == 9) %>% summarise(avg_temp = mean((temp - 32) * 5 / 9, na.rm = TRUE)) %>% knitr::kable()
 ```
   
   k) Самолеты какой авиакомпании совершили больше всего вылетов в июне?
 ```{r}
-flights %>% filter(month == 6) %>% count(carrier, sort = TRUE)
+flights %>% filter(month == 6) %>% count(carrier, sort = TRUE) %>% knitr::kable()
 ```
   
   l) Самолеты какой авиакомпании задерживались чаще других в 2013 году?
 ```{r}
-flights %>% filter(dep_delay > 0 & year == 2013) %>% count(carrier, sort = TRUE)
+flights %>% filter(dep_delay > 0 & year == 2013) %>% count(carrier, sort = TRUE) %>% knitr::kable()
 ```
   
 ## Оценка результата
