--- a/lab8/README.qmd
+++ b/lab8/README.qmd
@@ -114,7 +114,7 @@ FROM tbl
 WHERE src <> '13.37.84.125'
     AND src <> '12.55.77.96'
     AND (src LIKE '12.%' OR src LIKE '13.%' OR src LIKE '14.%')
-    AND (dst NOT LIKE '12.%' OR dst NOT LIKE '13.%' OR dst NOT LIKE '14.%');")
+    AND (dst NOT LIKE '12.%' AND dst NOT LIKE '13.%' AND dst NOT LIKE '14.%');")
 ```
 
 ```{r}
