--- a/lab6/README.qmd
+++ b/lab6/README.qmd
@@ -60,6 +60,9 @@ format:
 
 ![](img/6.png)
 
+Ссылка на дашборд:
+https://datalens.yandex/jxipcld4bfmo6
+
 ## Оценка результата
 
 В результате работы были созданы чарты и из них создан прекрасный дашборд.
