--- a/lab6/README.qmd
+++ b/lab6/README.qmd
@@ -42,6 +42,7 @@ format:
 ![](img/2.png)
 
 3. Создаем чарты и оформляем их в соответствии с заданием:
+
   а) Представить в виде круговой диаграммы соотношение внешнего и внутреннего
 сетевого трафика.
 
@@ -60,8 +61,7 @@ format:
 
 ![](img/6.png)
 
-Ссылка на дашборд:
-https://datalens.yandex/jxipcld4bfmo6
+Ссылка на дашборд https://datalens.yandex/jxipcld4bfmo6
 
 ## Оценка результата
 
